--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,8 +9,14 @@ body {
 	width: 100vw;
 }
 
-#plotlyPlot {
+#plots-grid {
 	width: 100%;
 	height: 100%;
+	display: grid;
+	grid-template-areas: "a b" "a c";
 }
+
+#plot1 {grid-area: a;}
+#plot2 {grid-area: b;}
+#plot3 {grid-area: c;}
 
