--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,11 +12,10 @@ body {
 #plots-grid {
 	width: 100%;
 	height: 100%;
-	display: grid;
-	grid-template-areas: "a b" "a c";
 }
 
-#plot1 {grid-area: a;}
-#plot2 {grid-area: b;}
-#plot3 {grid-area: c;}
+#plot1, #plot2, #plot3 {
+	width: 100%;
+	height: 100%;
+}
 
