--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,5 +17,13 @@ body {
 #plot1, #plot2, #plot3 {
 	width: 100%;
 	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 4em;
 }
+
+#plot1 {background-color: red;}
+#plot2 {background-color: green;}
+#plot3 {background-color: blue;}
 
