--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,12 +9,7 @@ body {
 	width: 100vw;
 }
 
-#plots-grid {
-	width: 100%;
-	height: 100%;
-}
-
-#plot1, #plot2, #plot3 {
+#plot {
 	width: 100%;
 	height: 100%;
 }
